--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 asgiref==3.6.0
 autopep8==2.0.2
+certifi==2022.12.7
+charset-normalizer==3.0.1
 Django==4.1.7
 gunicorn==20.1.0
+idna==3.4
 Pillow==9.4.0
 pycodestyle==2.10.0
+PyJWT==2.6.0
 python-decouple==3.8
+pytz==2022.7.1
+requests==2.28.2
 sqlparse==0.4.3
+twilio==7.16.4
 tzdata==2022.7
+urllib3==1.26.14
 whitenoise==6.4.0
